--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "files.associations": {
         "output.h": "c",
-        "puttyn.h": "c"
-    }
+        "puttyn.h": "c",
+        "idt.h": "c",
+        "types.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "enabled",
+    "terminal.explorerKind": "external"
 }
